--- a/src/app/homepage/newsletter/newsletter.component.html
+++ b/src/app/homepage/newsletter/newsletter.component.html
@@ -72,7 +72,7 @@
  -->
 
 <section class="programs">
-  <h2 class="programs-heading">News and Events :</h2>
+  <h2 class="programs-heading">News and Events </h2>
 
   <div class="programs-grid">
     <!-- Row 1: 30% | 70% -->
@@ -84,7 +84,7 @@
       </div>
     </div>
 
-    <div class="program-card card-2" style="background-image: url('assets/bannerimage/entrepre-1.jpeg');">
+    <div class="program-card card-2" style="background-image: url('assets/bannerimage/hackathon-1.jpeg');">
       <div class="overlay">
         <h3 class="program-title">Program 2 Title</h3>
         <p class="program-subtitle">Program 2 Subtitle</p>
@@ -93,7 +93,7 @@
     </div>
 
     <!-- Row 2: 70% | 30% -->
-    <div class="program-card card-3" style="background-image: url('assets/bannerimage/entrepre-1.jpeg');">
+    <div class="program-card card-3" style="background-image: url('assets/bannerimage/cardimg-3.jpeg');">
       <div class="overlay">
         <h3 class="program-title">Program 3 Title</h3>
         <p class="program-subtitle">Program 3 Subtitle</p>
@@ -101,7 +101,7 @@
       </div>
     </div>
 
-    <div class="program-card card-4" style="background-image: url('assets/bannerimage/entrepre-1.jpeg');">
+    <div class="program-card card-4" style="background-image: url('assets/bannerimage/cardimg-2.jpeg');">
       <div class="overlay">
         <h3 class="program-title">Program 4 Title</h3>
         <p class="program-subtitle">Program 4 Subtitle</p>
