--- a/src/app/entrepreneur-intro/entrepreneur-intro.component.html
+++ b/src/app/entrepreneur-intro/entrepreneur-intro.component.html
@@ -1,5 +1,5 @@
 
-
+<div class="entrepreneur-newsletter-container1">
   <!-- Entrepreneurship Development -->
   <main class="entrepreneurship-content">
     <div class="title">
@@ -40,4 +40,4 @@
       </div>
     </section>
   </main>
-
+</div>
