--- a/src/app/lab/Smart_Factory_Center/SFC.component.html
+++ b/src/app/lab/Smart_Factory_Center/SFC.component.html
@@ -35,7 +35,7 @@
 
   <!-- Section 3: Image left, content right (multi-column competency & tools) -->
   <section class="im-section section-3">
-    <img src="assets/bannerimage/smart2.jpg" alt="Smart Factory Skills & Tools">
+    <img src="assets/labs/Innovative_manu/jishnu.jpeg" alt="Smart Factory Skills & Tools">
     <div class="im-content">
       <h2>Competency & Tools</h2>
 
