--- a/src/app/lab/inovative_manufacturing/IM.component.html
+++ b/src/app/lab/inovative_manufacturing/IM.component.html
@@ -4,7 +4,7 @@
 
   <!-- Section 1: Image left, content right -->
   <section class="im-section">
-    <img src="assets/labs/smartfactory/AI & ML Based Smartfactory.jpg" alt="AI & ML Based Smart Factory">
+    <img src="assets/labs/Innovative_manu/IM!.jpeg" alt="AI & ML Based Smart Factory">
     <div class="im-content">
       <h2>Overview</h2>
       <p>
@@ -33,7 +33,7 @@
 
   <!-- Section 3: Image left, content right -->
   <section class="im-section">
-    <img src="assets/labs/smartfactory/collaborative Robots.jpg" alt="Collaborative Robots">
+    <img src="assets/labs/Innovative_manu/jishnu.jpeg" alt="Collaborative Robots">
     <div class="im-content">
       <h2>Skills & Tools</h2>
       <div class="lists-container">
