--- a/src/app/entrepreneur-intro/entrepreneur-intro.component.css
+++ b/src/app/entrepreneur-intro/entrepreneur-intro.component.css
@@ -2,7 +2,10 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@400;500;600;700&family=Inter:wght@300;400;500;600;700&display=swap');
 
-
+.entrepreneur-newsletter-container1{
+  background-color: #F5EFE6;
+  padding: 30px 0px;
+}
 .entrepreneur-newsletter-container {
   display: flex;
   flex-direction: row;
