--- a/src/app/lab/Research_Centre_For_Asset_Performance/RCFAP.component.html
+++ b/src/app/lab/Research_Centre_For_Asset_Performance/RCFAP.component.html
@@ -84,4 +84,13 @@
       </div>
     </div>
   </section>
+     <!-- Box 4: Case Study -->
+     <div class="lab-box">
+      <div class="lab-text">
+        <h2>Case Study</h2>
+        <p>
+          A large-scale manufacturing plant faced frequent unplanned downtimes due to failures in critical rotating machinery, impacting productivity and increasing maintenance costs. The CPEA Lab partnered with the facility to deploy a predictive maintenance solution using digital twin modeling, sensor-based data acquisition, and advanced analytics. Real-time data from IoT-enabled vibration and temperature sensors were streamed via MQTT and analyzed using Python and Grafana dashboards. Through thermal-structural simulations and pattern recognition algorithms, the team identified early signs of wear and optimized the maintenance schedule. This solution reduced unplanned downtimes by 40%, improved asset lifespan, and delivered an annual cost savings of ₹18 lakhs—demonstrating the value of integrating simulation and Industrial IoT in asset performance management.
+        </p>
+      </div>
+    </div>
 </div>
