--- a/src/app/lab/Smart_Factory_Center/SFC.component.html
+++ b/src/app/lab/Smart_Factory_Center/SFC.component.html
@@ -60,10 +60,19 @@
             <li>Robo DK</li>
             <li>TIA Portal</li>
             <li>Dobot Scratch Programming</li>
-            
+
           </ul>
         </div>
       </div>
     </div>
   </section>
+   <!-- Box 4: Case Study -->
+   <div class="lab-box">
+    <div class="lab-text">
+      <h2>Case Study</h2>
+      <p>
+        A major automotive OEM sought to enhance its production efficiency by reducing robotic downtime and improving assembly line synchronization. The Smart Factory Centre at TANSAM collaborated to develop a complete digital twin of the production line using Siemens Process Simulate and Plant Simulation. Through robotic path planning, cycle time analysis, and signal mapping, the team identified key bottlenecks and optimized robot movements. This virtual commissioning reduced the need for physical trials by 70% and cut commissioning time by two weeks. The result was a 15% increase in throughput and significantly reduced operational risk—demonstrating the transformative impact of smart manufacturing technologies.
+      </p>
+    </div>
+  </div>
 </div>
