--- a/src/app/lab/inovative_manufacturing/IM.component.html
+++ b/src/app/lab/inovative_manufacturing/IM.component.html
@@ -55,4 +55,13 @@
       </div>
     </div>
   </section>
+    <!-- Box 4: Case Study -->
+    <div class="lab-box">
+      <div class="lab-text">
+        <h2>Case Study</h2>
+        <p>
+          A leading MSME in the automotive sector approached the Tamil Nadu Smart Manufacturing Centre for rapid prototyping of a discontinued yet critical engine component. Using a handheld 3D scanner (Calibry Mini), the original worn-out part was digitally captured and reverse-engineered using Siemens NX. The digital model was then optimized and 3D printed using Markforged’s metal printer, producing a high-strength, functional prototype in under 72 hours. This reduced production downtime, eliminated the need for expensive tooling, and highlighted the center’s ability to deliver end-to-end smart manufacturing solutions.
+        </p>
+      </div>
+    </div>
 </div>
