Changes in academia coureseware about us our strength

--- a/src/app/academia/academia.html
+++ b/src/app/academia/academia.html
@@ -133,14 +133,14 @@
     <div class="effectiveness-area">
       <h2 class="effectiveness-title">Data Science</h2>
       <div class="image-row">
-        <div class="effectiveness-imgcol">
+        <!-- <div class="effectiveness-imgcol">
           <span class="img-label">Avg. Pre-Assessment</span>
           <img src="assets/bannerimage/ds-1.png" alt="DS Avg Pre-Assessment" />
-        </div>
-        <div class="effectiveness-imgcol">
+        </div> -->
+        <!-- <div class="effectiveness-imgcol">
           <span class="img-label">Avg. Post-Assessment</span>
           <img src="assets/bannerimage/ds-2.png" alt="DS Avg Post-Assessment" />
-        </div>
+        </div> -->
       </div>
       <div class="image-row">
         <div class="effectiveness-imgcol">
@@ -153,7 +153,7 @@
     <!-- Artificial Intelligence Block -->
     <div class="effectiveness-area">
       <h2 class="effectiveness-title">Artificial Intelligence</h2>
-      <div class="image-row">
+      <!-- <div class="image-row">
         <div class="effectiveness-imgcol">
           <span class="img-label">Avg. Pre-Assessment</span>
           <img src="assets/bannerimage/AI-1.png" alt="AI Avg Pre-Assessment" />
@@ -162,7 +162,7 @@
           <span class="img-label">Avg. Post-Assessment</span>
           <img src="assets/bannerimage/AI-2.png" alt="AI Avg Post-Assessment" />
         </div>
-      </div>
+      </div> -->
       <div class="image-row">
         <div class="effectiveness-imgcol">
           <span class="img-label">Pre-Assessment Vs Post-Assessment</span>
